- Popup added, so that on click of table, popup will open another Component. - Component changed to list all the menu items. - Api Calls from Spring Boot added and made functionial.

--- a/src/components/menuitem/menuitem.component.html
+++ b/src/components/menuitem/menuitem.component.html
@@ -1,1 +1,21 @@
-<p>menuitem works!</p>
+<div>
+  @for (menuitem of menuitems; track menuitem) {
+  <p-card header="{{ menuitem.name }}" [style]="{ width: '250px' }">
+    <ng-template pTemplate="header">
+      <img src="{{ menuitem.menuitemimg }}" />
+    </ng-template>
+    <p>{{ menuitem.description }} item.</p>
+    <ng-template pTemplate="footer">
+      <div class="AddAndRemove">
+        <p-button
+          label="Remove"
+          severity="danger"
+          class="w-full"
+          styleClass="w-full"
+        />
+        <p-button label="Add" (onClick)="postOrder(order)" />
+      </div>
+    </ng-template>
+  </p-card>
+  }
+</div>
