Changed the Project to be a non-standalone project in order to make it easier to use libraries. Started implementing ngrx. Created a store, actions, reducers, and selectors.

--- a/src/components/menuitem/menuitem.component.html
+++ b/src/components/menuitem/menuitem.component.html
@@ -13,7 +13,7 @@
           class="w-full"
           styleClass="w-full"
         />
-        <p-button label="Add" (onClick)="postOrder(order)" />
+        <p-button label="Add" (onClick)="addToOrderMenuitem(menuitem)" />
       </div>
     </ng-template>
   </p-card>
